Bug 223095 - Crash while pulling different sensors (was "Hard Disc Totals") [KSignalPlotter::beamColor, FancyPlotter::answerReceived, KSGRD::SensorAgent::processAnswer]
Summary: Crash while pulling different sensors (was "Hard Disc Totals") [KSignalPlotte...
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
: 229061 230155 238386 238621 242625 244170 261935 263536 263819 267991 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-01-17 10:47 UTC by m.wege
Modified: 2012-10-28 21:53 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (4.83 KB, text/plain)
2010-03-13 16:45 UTC, Jurij Petrovski
Details
New crash information added by DrKonqi (5.84 KB, text/plain)
2010-09-10 11:15 UTC, Jurij Petrovski
Details
New crash information added by DrKonqi (5.83 KB, text/plain)
2010-12-03 16:00 UTC, vasilisc
Details
New crash information added by DrKonqi (5.11 KB, text/plain)
2011-02-09 00:53 UTC, Patrick
Details
New crash information added by DrKonqi (5.73 KB, text/plain)
2011-03-14 04:31 UTC, scrubjay
Details

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2010-01-17 10:47:27 UTC
Application: ksysguard (4.3.90 (KDE 4.3.90 (KDE 4.4 RC1)))
KDE Platform Version: 4.3.90 (KDE 4.3.90 (KDE 4.4 RC1))
Qt Version: 4.6.0
Operating System: Linux 2.6.31-18-generic i686
Distribution: Ubuntu 9.10

-- Information about the crash:
While playing around, this crash occurs reproducably, when I pull a (any) sensor on the sheet hard disc totals. While doing this, does not make many sense, the crash should not happen.

The crash can be reproduced every time.

 -- Backtrace:
Application: Systemmonitor (kdeinit4), signal: Segmentation fault
[KCrash Handler]
#6  0x02fc32cc in KSignalPlotter::beamColor(int) const () from /usr/lib/libksignalplotter.so.4
#7  0x03ef7744 in ?? () from /usr/lib/libkdeinit4_ksysguard.so
#8  0x063dbac9 in KSGRD::SensorAgent::processAnswer(char const*, int) () from /usr/lib/libksgrd.so.4
#9  0x063e4acb in ?? () from /usr/lib/libksgrd.so.4
#10 0x063e5aff in ?? () from /usr/lib/libksgrd.so.4
#11 0x00ef411a in QMetaObject::metacall (object=0x8ce7058, cl=QMetaObject::WriteProperty, idx=147746904, argv=0x8ce7058) at kernel/qmetaobject.cpp:237
#12 0x00f0289b in QMetaObject::activate (sender=0x8ccdd50, m=0x10016c8, local_signal_index=5, argv=0x0) at kernel/qobject.cpp:3294
#13 0x00e86547 in QProcess::readyReadStandardOutput (this=0x8ccdd50) at .moc/release-shared/moc_qprocess.cpp:162
#14 0x00e8acaf in QProcessPrivate::_q_canReadStandardOutput (this=0x8cd0410) at io/qprocess.cpp:886
#15 0x00e8b126 in QProcess::qt_metacall (this=0x8ccdd50, _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0xbff18138) at .moc/release-shared/moc_qprocess.cpp:107
#16 0x001e46fa in KProcess::qt_metacall (this=0x8ccdd50, _c=QMetaObject::InvokeMetaMethod, _id=17, _a=0xbff18138) at ./kprocess.moc:69
#17 0x00ef411a in QMetaObject::metacall (object=0x8ccdd50, cl=QMetaObject::WriteProperty, idx=17, argv=0xbff18138) at kernel/qmetaobject.cpp:237
#18 0x00f0289b in QMetaObject::activate (sender=0x8ce4858, m=0x1003550, local_signal_index=0, argv=0xbff18138) at kernel/qobject.cpp:3294
#19 0x00f54053 in QSocketNotifier::activated (this=0x8ce4858, _t1=14) at .moc/release-shared/moc_qsocketnotifier.cpp:89
#20 0x00f09e27 in QSocketNotifier::event (this=0x8ce4858, e=0xbff18554) at kernel/qsocketnotifier.cpp:317
#21 0x0747419c in QApplicationPrivate::notify_helper (this=0x8bb1590, receiver=0x8ce4858, e=0xbff18554) at kernel/qapplication.cpp:4242
#22 0x0747adf7 in QApplication::notify (this=0x8ba2858, receiver=0x8ce4858, e=0xbff18554) at kernel/qapplication.cpp:3661
#23 0x00bb067a in KApplication::notify (this=0x8ba2858, receiver=0x8ce4858, event=0xbff18554) at ../../kdeui/kernel/kapplication.cpp:302
#24 0x00eeeeab in QCoreApplication::notifyInternal (this=0x8ba2858, receiver=0x8ce4858, event=0xbff18554) at kernel/qcoreapplication.cpp:704
#25 0x00f1afaa in QCoreApplication::sendEvent (source=0x8bb4110) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#26 socketNotifierSourceDispatch (source=0x8bb4110) at kernel/qeventdispatcher_glib.cpp:110
#27 0x027ede88 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#28 0x027f1730 in ?? () from /lib/libglib-2.0.so.0
#29 0x027f1863 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#30 0x00f1abd5 in QEventDispatcherGlib::processEvents (this=0x8bb1570, flags=...) at kernel/qeventdispatcher_glib.cpp:407
#31 0x07531b75 in QGuiEventDispatcherGlib::processEvents (this=0x8bb1570, flags=...) at kernel/qguieventdispatcher_glib.cpp:202
#32 0x00eed4c9 in QEventLoop::processEvents (this=0xbff187f4, flags=) at kernel/qeventloop.cpp:149
#33 0x00eed91a in QEventLoop::exec (this=0xbff187f4, flags=...) at kernel/qeventloop.cpp:201
#34 0x00ef1b0f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#35 0x07474237 in QApplication::exec () at kernel/qapplication.cpp:3570
#36 0x03f30de7 in kdemain () from /usr/lib/libkdeinit4_ksysguard.so
#37 0x0804dff7 in launch (argc=<value optimized out>, _name=<value optimized out>, args=<value optimized out>, cwd=0x0, envc=0, envs=0x8b9fddb "", reset_env=false, tty=0x0, avoid_loops=false, 
    startup_id_str=0x8051429 "0") at ../../kinit/kinit.cpp:706
#38 0x0804ec15 in handle_launcher_request (sock=<value optimized out>, who=<value optimized out>) at ../../kinit/kinit.cpp:1198
#39 0x0804f08c in handle_requests (waitForPid=<value optimized out>) at ../../kinit/kinit.cpp:1391
#40 0x0804fe27 in main (argc=4, argv=0xbff19324, envp=0xbff19338) at ../../kinit/kinit.cpp:1830

Reported using DrKonqi
Comment 1 Dario Andres 2010-01-18 01:24:17 UTC
Bug 213175 is related to this.
- As you can reproduce the crash at will (or you experience this regularly), can you install the "kdebase-workspace-dbg" package and post a complete backtrace here? (you can get more information at http://techbase.kde.org/User:DarioAndres/Basic_Guide_about_Crash_Reporting ) Thanks
Comment 2 John Tapsell 2010-01-18 03:23:23 UTC
I can't reproduce this crash.
Comment 3 m.wege 2010-01-22 14:50:26 UTC
Here it is:
Application: Systemmonitor (kdeinit4), signal: Segmentation fault
[KCrash Handler]
#6  QColor (this=0x8aad120, index=4) at /usr/include/qt4/QtGui/qcolor.h:289
#7  KSignalPlotter::beamColor (this=0x8aad120, index=4) at ../../../../libs/ksysguard/signalplotter/ksignalplotter.cpp:116
#8  0x048a8744 in FancyPlotter::answerReceived (this=0x8adbc60, id=104, answerlist=...) at ../../../ksysguard/gui/SensorDisplayLib/FancyPlotter.cc:726
#9  0x0665aac9 in KSGRD::SensorAgent::processAnswer (this=0x8a5fc40, buf=0x91a9eb0 "Free Memory\t0\t2052524\tKB\nksysguardd> ", buflen=37) at ../../../../ksysguard/gui/ksgrd/SensorAgent.cc:184
#10 0x06663acb in KSGRD::SensorShellAgent::msgRcvd (this=0x8a5fc40) at ../../../../ksysguard/gui/ksgrd/SensorShellAgent.cc:91
#11 0x06664aff in KSGRD::SensorShellAgent::qt_metacall (this=0x8a5fc40, _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0xbfcb4b0c) at ./SensorShellAgent.moc:78
#12 0x0106211a in QMetaObject::metacall (object=0x8a5fc40, cl=QMetaObject::WriteProperty, idx=5, argv=0xbfcb4b0c) at kernel/qmetaobject.cpp:237
#13 0x0107089b in QMetaObject::activate (sender=0x8a46170, m=0x116f6c8, local_signal_index=5, argv=0x0) at kernel/qobject.cpp:3294
#14 0x00ff4547 in QProcess::readyReadStandardOutput (this=0x8a46170) at .moc/release-shared/moc_qprocess.cpp:162
#15 0x00ff8caf in QProcessPrivate::_q_canReadStandardOutput (this=0x8a5f958) at io/qprocess.cpp:886
#16 0x00ff9126 in QProcess::qt_metacall (this=0x8a46170, _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0xbfcb4d08) at .moc/release-shared/moc_qprocess.cpp:107
#17 0x001e46fa in KProcess::qt_metacall (this=0x8a46170, _c=QMetaObject::InvokeMetaMethod, _id=17, _a=0xbfcb4d08) at ./kprocess.moc:69
#18 0x0106211a in QMetaObject::metacall (object=0x8a46170, cl=QMetaObject::WriteProperty, idx=17, argv=0xbfcb4d08) at kernel/qmetaobject.cpp:237
#19 0x0107089b in QMetaObject::activate (sender=0x8a745a0, m=0x1171550, local_signal_index=0, argv=0xbfcb4d08) at kernel/qobject.cpp:3294
#20 0x010c2053 in QSocketNotifier::activated (this=0x8a745a0, _t1=16) at .moc/release-shared/moc_qsocketnotifier.cpp:89
#21 0x01077e27 in QSocketNotifier::event (this=0x8a745a0, e=0xbfcb5124) at kernel/qsocketnotifier.cpp:317
#22 0x019ad19c in QApplicationPrivate::notify_helper (this=0x88e45d0, receiver=0x8a745a0, e=0xbfcb5124) at kernel/qapplication.cpp:4242
#23 0x019b3df7 in QApplication::notify (this=0x88baa48, receiver=0x8a745a0, e=0xbfcb5124) at kernel/qapplication.cpp:3661
#24 0x00c5a67a in KApplication::notify (this=0x88baa48, receiver=0x8a745a0, event=0xbfcb5124) at ../../kdeui/kernel/kapplication.cpp:302
#25 0x0105ceab in QCoreApplication::notifyInternal (this=0x88baa48, receiver=0x8a745a0, event=0xbfcb5124) at kernel/qcoreapplication.cpp:704
#26 0x01088faa in QCoreApplication::sendEvent (source=0x88ea898) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#27 socketNotifierSourceDispatch (source=0x88ea898) at kernel/qeventdispatcher_glib.cpp:110
#28 0x011b4e88 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#29 0x011b8730 in ?? () from /lib/libglib-2.0.so.0
#30 0x011b8863 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#31 0x01088bd5 in QEventDispatcherGlib::processEvents (this=0x88e45b0, flags=...) at kernel/qeventdispatcher_glib.cpp:407
#32 0x01a6ab75 in QGuiEventDispatcherGlib::processEvents (this=0x88e45b0, flags=...) at kernel/qguieventdispatcher_glib.cpp:202
#33 0x0105b4c9 in QEventLoop::processEvents (this=0xbfcb53c4, flags=) at kernel/qeventloop.cpp:149
#34 0x0105b91a in QEventLoop::exec (this=0xbfcb53c4, flags=...) at kernel/qeventloop.cpp:201
#35 0x0105fb0f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#36 0x019ad237 in QApplication::exec () at kernel/qapplication.cpp:3570
#37 0x048e1de7 in kdemain (argc=1, argv=0x88bd8c8) at ../../../ksysguard/gui/ksysguard.cc:582
#38 0x0804dff7 in launch (argc=<value optimized out>, _name=<value optimized out>, args=<value optimized out>, cwd=0x0, envc=1, envs=0x88bdbab "DISPLAY=:0.0", reset_env=false, tty=0x0, 
    avoid_loops=false, startup_id_str=0x88bdbbc "penguin;1264160370;587068;6473_TIME10130304") at ../../kinit/kinit.cpp:706
#39 0x0804ec15 in handle_launcher_request (sock=<value optimized out>, who=<value optimized out>) at ../../kinit/kinit.cpp:1198
#40 0x0804f08c in handle_requests (waitForPid=<value optimized out>) at ../../kinit/kinit.cpp:1391
#41 0x0804fe27 in main (argc=4, argv=0xbfcb5ef4, envp=0xbfcb5f08) at ../../kinit/kinit.cpp:1830
Comment 4 John Tapsell 2010-01-22 16:12:04 UTC
Do you have any devices plugged in? E.g. mobile phone etc.

There's a related crash when you have a mount point with \n in its name.
Comment 5 m.wege 2010-01-22 16:16:30 UTC
No. But there is a second internal harddrive with different partitions mounted. One of them is called /windows/ which is with an an n without an \ in its name.
Comment 6 Jurij Petrovski 2010-03-13 16:45:48 UTC
Created attachment 41594 [details]
New crash information added by DrKonqi

System monitor crashed when I pulled k8 cpu sensor into the hdd graph.
Comment 7 Nicolas L. 2010-07-12 14:46:40 UTC
*** Bug 229061 has been marked as a duplicate of this bug. ***
Comment 8 Nicolas L. 2010-07-12 14:46:57 UTC
*** Bug 230155 has been marked as a duplicate of this bug. ***
Comment 9 Nicolas L. 2010-07-12 14:47:02 UTC
*** Bug 238386 has been marked as a duplicate of this bug. ***
Comment 10 Nicolas L. 2010-07-12 14:47:13 UTC
*** Bug 238621 has been marked as a duplicate of this bug. ***
Comment 11 Nicolas L. 2010-07-12 14:47:19 UTC
*** Bug 244170 has been marked as a duplicate of this bug. ***
Comment 12 Jurij Petrovski 2010-09-10 11:15:13 UTC
Created attachment 51507 [details]
New crash information added by DrKonqi

ksysguard (4.5.1 (KDE 4.5.1)) on KDE Platform 4.5.1 (KDE 4.5.1) using Qt 4.7.0

- What I was doing when the application crashed:

Pulled cpu temperature sensor into diagram and program crashed.

-- Backtrace (Reduced):
#6  QColor (this=0x2640070, index=<value optimized out>) at /usr/include/qt4/QtGui/qcolor.h:292
#7  KSignalPlotter::beamColor (this=0x2640070, index=<value optimized out>) at ../../../../libs/ksysguard/signalplotter/ksignalplotter.cpp:109
#8  0x00007fc286e68457 in FancyPlotter::answerReceived (this=0x255a6e0, id=<value optimized out>, answerlist=<value optimized out>) at ../../../ksysguard/gui/SensorDisplayLib/FancyPlotter.cc:712
#9  0x00007fc285f77c5e in KSGRD::SensorAgent::processAnswer (this=0x24efd10, buf=<value optimized out>, buflen=<value optimized out>) at ../../../../ksysguard/gui/ksgrd/SensorAgent.cc:184
#10 0x00007fc285f7f6be in KSGRD::SensorShellAgent::msgRcvd (this=0x24efd10) at ../../../../ksysguard/gui/ksgrd/SensorShellAgent.cc:91
Comment 13 Christoph Feck 2010-10-11 14:28:24 UTC
*** Bug 242625 has been marked as a duplicate of this bug. ***
Comment 14 vasilisc 2010-12-03 16:00:39 UTC
Created attachment 54041 [details]
New crash information added by DrKonqi

ksysguard (4.5.4 (KDE 4.5.4)) on KDE Platform 4.5.4 (KDE 4.5.4) using Qt 4.7.0

- What I was doing when the application crashed:

tried to add a sensor it8712
All other sensors are added correctly

-- Backtrace (Reduced):
#6  QColor (this=0x270f5e0, index=<value optimized out>) at /usr/include/qt4/QtGui/qcolor.h:292
#7  KSignalPlotter::beamColor (this=0x270f5e0, index=<value optimized out>) at ../../../../libs/ksysguard/signalplotter/ksignalplotter.cpp:109
#8  0x00007f216dccb3c7 in FancyPlotter::answerReceived (this=0x28a4f60, id=<value optimized out>, answerlist=<value optimized out>) at ../../../ksysguard/gui/SensorDisplayLib/FancyPlotter.cc:712
#9  0x00007f216cde874e in KSGRD::SensorAgent::processAnswer (this=0x2721030, buf=<value optimized out>, buflen=<value optimized out>) at ../../../../ksysguard/gui/ksgrd/SensorAgent.cc:184
#10 0x00007f216cdf01ae in KSGRD::SensorShellAgent::msgRcvd (this=0x2721030) at ../../../../ksysguard/gui/ksgrd/SensorShellAgent.cc:91
Comment 15 Patrick 2011-02-09 00:53:51 UTC
Created attachment 57004 [details]
New crash information added by DrKonqi

ksysguard (4.6.00 (4.6.0) "release 381") on KDE Platform 4.6.00 (4.6.0) "release 381" using Qt 4.7.1

- What I was doing when the application crashed:

dragged CPU clock frequency onto HD sensor.

-- Backtrace (Reduced):
#6  QColor (this=<value optimized out>, index=<value optimized out>) at /usr/include/QtGui/qcolor.h:292
#7  KSignalPlotter::beamColor (this=<value optimized out>, index=<value optimized out>) at /usr/src/debug/kdebase-workspace-4.6.0/libs/ksysguard/signalplotter/ksignalplotter.cpp:109
#8  0x00007fb9b017e51a in FancyPlotter::answerReceived (this=0x84e940, id=110, answerlist=<value optimized out>)
    at /usr/src/debug/kdebase-workspace-4.6.0/ksysguard/gui/SensorDisplayLib/FancyPlotter.cc:712
#9  0x00007fb9afa96018 in KSGRD::SensorAgent::processAnswer (this=0x7eed60, buf=<value optimized out>, buflen=<value optimized out>)
    at /usr/src/debug/kdebase-workspace-4.6.0/ksysguard/gui/ksgrd/SensorAgent.cc:184
#10 0x00007fb9afa9d0fe in KSGRD::SensorShellAgent::msgRcvd (this=<value optimized out>) at /usr/src/debug/kdebase-workspace-4.6.0/ksysguard/gui/ksgrd/SensorShellAgent.cc:91
Comment 16 Patrick 2011-02-09 01:01:51 UTC
Let me rephrase: dragged CPU clock frequency onto HD totals tab.

This is probably due to the fact one is a float and the other one is an integer.
Comment 17 Dario Andres 2011-03-08 19:50:59 UTC
[Comment from a bug triager]
From bug 263536 (KDE SC 4.4.5):
-- Information about the crash:
When adding additional fields to Hard Disk Totals (such as the I/Os currently
in progress under Disk Throughput -> sda -> I/Os currently in progress), KDE's
System Monitor rolls over and dies.

From bug 263819 (KDE SC 4.4.5):
-- Information about the crash:
Different things happen depending on the section of Sensor Browser under which
the sensor being added is found.

Crashes:
System > Processors, Cores
CPU Load
Hardware Sensors
Partition Usage (some, sometimes)
Disk Throughput > sd*
Memory > swap
Network

Doesn't crash, doesn't add to graph:
logfiles
Partition Usage (some, sometimes)

Doesn't crash, adds to graph:
System > Uptime
Partition Usage > System Load
Disk Throughput > ram
Memory > physical
Process Count

What happens for a given item under Partition Usage varies. One that gets added
one time can crash it the next. It seems like it might partially depend on the
order in which multiple things are added.
The crash can be reproduced every time.

From bug 263819 comment 2 (KDE SC 4.6.0):
- What I was doing when the application crashed:
Tried to drag CPU sensors to the graph.
- Custom settings of the application:
Installed Hard Disk Tab
Comment 18 Dario Andres 2011-03-08 19:51:16 UTC
*** Bug 267991 has been marked as a duplicate of this bug. ***
Comment 19 Dario Andres 2011-03-08 19:51:19 UTC
*** Bug 263819 has been marked as a duplicate of this bug. ***
Comment 20 Dario Andres 2011-03-08 19:51:21 UTC
*** Bug 263536 has been marked as a duplicate of this bug. ***
Comment 21 scrubjay 2011-03-14 04:31:28 UTC
Created attachment 57949 [details]
New crash information added by DrKonqi

ksysguard (4.5.1 (KDE 4.5.1)) on KDE Platform 4.5.1 (KDE 4.5.1) using Qt 4.7.0

- What I was doing when the application crashed: I also crashed System Monitor by dragging a sensor

-- Backtrace (Reduced):
#6  QColor (this=0x2616ae0, index=<value optimized out>) at /usr/include/qt4/QtGui/qcolor.h:292
#7  KSignalPlotter::beamColor (this=0x2616ae0, index=<value optimized out>) at ../../../../libs/ksysguard/signalplotter/ksignalplotter.cpp:109
#8  0x00007f04b3d093c7 in FancyPlotter::answerReceived (this=0x2616950, id=<value optimized out>, answerlist=<value optimized out>) at ../../../ksysguard/gui/SensorDisplayLib/FancyPlotter.cc:712
#9  0x00007f04b2e2874e in KSGRD::SensorAgent::processAnswer (this=0x24625f0, buf=<value optimized out>, buflen=<value optimized out>) at ../../../../ksysguard/gui/ksgrd/SensorAgent.cc:184
#10 0x00007f04b2e301ae in KSGRD::SensorShellAgent::msgRcvd (this=0x24625f0) at ../../../../ksysguard/gui/ksgrd/SensorShellAgent.cc:91
Comment 22 John Tapsell 2011-03-14 11:36:33 UTC
Git commit 68fc9687b99ad04598d037f4bf3bb23a15c0ffef by John Tapsell.
Committed on 14/03/2011 at 11:21.
Pushed by johnflux into branch 'KDE/4.6'.

Fix crash when mixing summation and non-summation sensors

Also fix the tooltip to make it look better when mixing summation and
non-summation sensors

BUG:223095

M  +16   -4    ksysguard/gui/SensorDisplayLib/FancyPlotter.cc     

http://commits.kde.org/kde-workspace/68fc9687b99ad04598d037f4bf3bb23a15c0ffef
Comment 23 John Tapsell 2011-03-14 11:36:51 UTC
Git commit fa2ae6b6c3f4563d7af9e7ab94f6faf68ab7304e by John Tapsell.
Committed on 14/03/2011 at 11:21.
Pushed by johnflux into branch 'master'.

Fix crash when mixing summation and non-summation sensors

Also fix the tooltip to make it look better when mixing summation and
non-summation sensors

BUG:223095

M  +16   -4    ksysguard/gui/SensorDisplayLib/FancyPlotter.cc     

http://commits.kde.org/kde-workspace/fa2ae6b6c3f4563d7af9e7ab94f6faf68ab7304e
Comment 24 John Tapsell 2011-03-14 11:42:17 UTC
Git commit d819fde3d2a1c1e28008da39f174b3959863f370 by John Tapsell.
Committed on 14/03/2011 at 11:21.
Pushed by johnflux into branch 'KDE/4.5'.

Fix crash when mixing summation and non-summation sensors

Also fix the tooltip to make it look better when mixing summation and
non-summation sensors

BUG:223095

M  +16   -4    ksysguard/gui/SensorDisplayLib/FancyPlotter.cc     

http://commits.kde.org/kde-workspace/d819fde3d2a1c1e28008da39f174b3959863f370
Comment 25 John Tapsell 2011-03-14 11:44:23 UTC
Thank you very much for all those that reported this, and to Dario especially for putting all the bug reports together.
Comment 26 Dario Andres 2011-03-14 19:12:42 UTC
You're welcome!. Thanks for the fix :)
Comment 27 Jekyll Wu 2012-07-05 20:55:42 UTC
*** Bug 261935 has been marked as a duplicate of this bug. ***
Comment 28 Christoph Feck 2012-10-28 21:53:53 UTC
*** Bug 263819 has been marked as a duplicate of this bug. ***