Fix crash when mixing summation and non-summation sensors

Also fix the tooltip to make it look better when mixing summation and
non-summation sensors

BUG:223095